--- a/GranitGashiResume.tex
+++ b/GranitGashiResume.tex
@@ -75,7 +75,7 @@ Created a website where a users can register and login; they could update their 
 {Organized our Own Hackathon, \href {http://hawkhack.io}{HawkHack.io}}
 {Montclair, NJ}
 {\emph{Computer Club} \\
-Montclair State University has never hosted a hackathon before. The computer club at MSU which includes me, organized our first ever hackathon that had over 130 participants. We had quite a few sponsers including google, Monster, and even UPS. The whole process took us a couple of months to set up, although we were not certified by MLH, we still went through with the hackathon and it was a total success!}
+Montclair State University has never hosted a hackathon before. The computer club at MSU which includes me, organized our first ever hackathon that had over 130 participants. We had quite a few sponsors including google, Monster, and even UPS. The whole process took us a couple of months to set up, although we were not certified by MLH, we still went through with the hackathon and it was a total success!}
 
 \end{entrylist}
 %------------------------------------------------
