Updated With Job Experience

--- a/GranitGashiResume.tex
+++ b/GranitGashiResume.tex
@@ -83,14 +83,35 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 \vspace{2mm}
 
 %==== Experience ====%
-\header{Self Emplyed}
+\header{Work Experience}
 \vspace{1mm}
 
+\textbf{Self Employed}\\
+\textit{Mining and Trading crypto currencies} \hfill Nov 2020 - Present\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item Built a mining rig to mine Ethereum and other crypto currencies, such as Dogecoin and Raven Coin
-	\item Camped out in front of stores over a few months for Graphics cards to start my self employment
+	\item Camped out in front of stores for months for Graphics cards to start my self employment
 	\item Build multiple computer rigs for me and my friends with a lot of different components.
+	\item Bought and sold different currencies like dogecoin and Ethereum on  tradining platforms like robinhood and TrustWallet
+	\item Finally, I learned the importance of patience
+\end{itemize}
+\textbf{Allendale SteakHouse} \hfill Allendale, NJ\\
+\textit{Busser} \hfill March 2020 - March 2020\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item Cleaned all tables before and after guests arrived at the place
+	\item Helped servers with large-parties, with the food and drinks
+	\item Refilled drinks and opened bottles of wine and Champaign for guests
+\end{itemize}
+\textbf{Uncle Paul\textquotesingle{}s Resturant} \hfill Manhattan, NY\\
+\textit{Busser} \hfill Sep 2014 - Sep 2015\\
+\vspace{-1mm}
+\begin{itemize} \itemsep 1pt
+	\item Swept, wiped and cleaned tables before and after individuals arrived.
+	\item Interreacted with a lot of people, and showed tremendous respect to each individual.
+	\item Ran food from kitchen to table to serve guests.
+	\item Refilled drinks, and placed water and bread on tables before or after guests arrived
 \end{itemize}
 
 \header{Skills}
