--- a/GranitGashiResume.tex
+++ b/GranitGashiResume.tex
@@ -90,10 +90,10 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 \textit{Mining and Trading crypto currencies} \hfill Nov 2020 - Present\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Built a mining rig to mine Ethereum and other crypto currencies, such as Dogecoin and Raven Coin
+	\item Built a mining rig to mine Ethereum and other crypto currencies, such as Doge coin and Raven Coin
 	\item Camped out in front of stores for months for Graphics cards to start my self employment
-	\item Build multiple computer rigs for me and my friends with a lot of different components.
-	\item Bought and sold different currencies like dogecoin and Ethereum on  tradining platforms like robinhood and TrustWallet
+	\item Built multiple computer rigs for me and my friends with a lot of different components.
+	\item Bought and sold different currencies like Doge coin and Ethereum on tradiing platforms like robinhood and TrustWallet
 	\item Finally, I learned the importance of patience
 \end{itemize}
 \textbf{Allendale SteakHouse} \hfill Allendale, NJ\\
@@ -102,7 +102,7 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 \begin{itemize} \itemsep 1pt
 	\item Cleaned all tables before and after guests arrived at the place
 	\item Helped servers with large-parties, with the food and drinks
-	\item Refilled drinks and opened bottles of wine and Champaign for guests
+	\item Refilled drinks and opened bottles of wine and champaign for guests
 \end{itemize}
 \textbf{Uncle Paul\textquotesingle{}s Resturant} \hfill Manhattan, NY\\
 \textit{Busser} \hfill Sep 2014 - Sep 2015\\
@@ -117,7 +117,7 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 \header{Skills}
 \begin{tabular}{ l l }
 	Programming Languages: & Java, Javascript, PHP, SQL, React                                                   \\
-	Technologies:          & Windows 7/10, Eclipse, JetBrains, GitBash, Git Desktop, Git, Mac OS, Visual Studios \\
+	Technologies:          & Windows 7/10, Eclipse, JetBrains, GitBash, Git Desktop, Git, macOS, Visual Studios \\
 \end{tabular}
 \vspace{2mm}
 
@@ -129,11 +129,11 @@ A platform where three different types of users can register and log in. Regular
 Used different Data Structures and Algorithms to complete challenges in LeetCode.com. Able to solve easy problems, medium problems, and some hard problems.\\
 \vspace*{2mm}
 {\textbf{Organized our own Hackathon}}\\
-Montclair state Uniovesity has never hosted a hackathon before, so the computer club which includes me organized our first ever hackathon that had over 130participants. We had quite a few sponosrs including google, Monster and even UPS. Although we were not cerified by MLH we still did the hackathon with the money we fund raised through school and sponsors.\\
+Montclair state Uniovesity has never hosted a hackathon before, so the computer club which includes me organized our first ever hackathon that had over 130participants. We had quite a few sponsors including google, Monster and even UPS. Although we were not cerified by MLH we still did the hackathon with the money we fund raised through school and sponsors.\\
 \vspace*{2mm}
 
 \header{Summary}
-\textbf{I am a future software engineer with a broad interest across the stack. I have a particular fondess for learning new data structures, studying software design patterns and creating or working with performant algorithms.}\\
+\textbf{I am a future software engineer with a broad interest across the stack. I have a particular fondness for learning new data structures, studying software design patterns and creating or working with performant algorithms.}\\
 
 \vspace*{2mm}
 
