--- a/GranitGashiResume.tex
+++ b/GranitGashiResume.tex
@@ -90,13 +90,12 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 \textit{Mining and Trading crypto currencies} \hfill Nov 2020 - Present\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Built a mining rig to mine Ethereum and other crypto currencies, such as Doge coin and Raven Coin
-	\item Camped out in front of stores for months for Graphics cards to start my self employment
+	\item Built a mining rig to mine Ethereum and other crypto currencies, such as Dogecoin and Ravencoin
+	\item Camped out in front of stores for months for graphics cards to start my self employment
 	\item Built multiple computer rigs for me and my friends with a lot of different components.
-	\item Bought and sold different currencies like Doge coin and Ethereum on tradiing platforms like robinhood and TrustWallet
-	\item Finally, I learned the importance of patience
+	\item Bought and sold different currencies like Dogecoin and Ethereum on tradiing platforms like Robinhood and TrustWallet
 \end{itemize}
-\textbf{Allendale SteakHouse} \hfill Allendale, NJ\\
+\textbf{Allendale Steakhouse} \hfill Allendale, NJ\\
 \textit{Busser} \hfill March 2020 - March 2020\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
@@ -104,7 +103,7 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 	\item Helped servers with large-parties, with the food and drinks
 	\item Refilled drinks and opened bottles of wine and champaign for guests
 \end{itemize}
-\textbf{Uncle Paul\textquotesingle{}s Resturant} \hfill Manhattan, NY\\
+\textbf{Uncle Paul\textquotesingle{}s Restaurant} \hfill Manhattan, NY\\
 \textit{Busser} \hfill Sep 2014 - Sep 2015\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
@@ -117,7 +116,8 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 \header{Skills}
 \begin{tabular}{ l l }
 	Programming Languages: & Java, Javascript, PHP, SQL, React                                                   \\
-	Technologies:          & Windows 7/10, Eclipse, JetBrains, GitBash, Git Desktop, Git, macOS, Visual Studios \\
+	Technologies:          & Windows 7/10, Eclipse, JetBrains, GitBash, Git Desktop, Git, macOS, Visual Studios, \\
+				& Hive OS	\\
 \end{tabular}
 \vspace{2mm}
 
