Updated Resume again
removed some work experience and added more lines to other work experiences .

--- a/GranitGashiResume.tex
+++ b/GranitGashiResume.tex
@@ -73,7 +73,7 @@
 \vspace*{-10pt}
 \begin{center}
 	{\Huge \scshape {Granit Gashi}}\\
-	West New York New Jersey $\cdot$ gashigi1@montclair.edu $\cdot$ (201) 699 9016 $\cdot$ https://www.linkedin.com/in/granitgashi/\\
+	West New York New Jersey $\cdot$ GranitG1997@gmail.com $\cdot$ (201) 699 9016 $\cdot$ https://www.linkedin.com/in/granitgashi/\\
 \end{center}
 
 %==== Education ====%
@@ -90,19 +90,14 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 \textit{Mining and Trading crypto currencies} \hfill Nov 2020 - Present\\
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
-	\item Built a mining rig to mine Ethereum and other crypto currencies, such as Dogecoin and Ravencoin
-	\item Camped out in front of stores for months for graphics cards to start my self employment
-	\item Built multiple computer rigs for me and my friends with a lot of different components.
+	\item Built a mining rig to mine Ethereum and other crypto currencies such as Dogecoin and Ravencoin
+	\item Built multiple computer rigs for personal use and a few associates with a variety of components
+	\item Advanced understanding of cryptocurrency exchanges in multiple platforms
 	\item Bought and sold different currencies like Dogecoin and Ethereum on tradiing platforms like Robinhood and TrustWallet
+	\item Experienced in installing cryptocurrency mining rigs, which includes building racks for the equipment, stacking it, and overall cable mangement
+	\item Found new ways to make the mining rigs more effiencent through maintence which involved changing their thermal pads, thermal paste and editing their performance through Hive OS. Which overall increases their HashRate and sometimes even lowers power consumption
 \end{itemize}
-\textbf{Allendale Steakhouse} \hfill Allendale, NJ\\
-\textit{Busser} \hfill March 2020 - March 2020\\
-\vspace{-1mm}
-\begin{itemize} \itemsep 1pt
-	\item Cleaned all tables before and after guests arrived at the place
-	\item Helped servers with large-parties, with the food and drinks
-	\item Refilled drinks and opened bottles of wine and champaign for guests
-\end{itemize}
+
 \textbf{Uncle Paul\textquotesingle{}s Restaurant} \hfill Manhattan, NY\\
 \textit{Busser} \hfill Sep 2014 - Sep 2015\\
 \vspace{-1mm}
@@ -110,7 +105,8 @@ BS Computer Science \textit{GPA: 3.3} \hfill Sep 2016 - May 2020\\
 	\item Swept, wiped and cleaned tables before and after individuals arrived.
 	\item Interreacted with a lot of people, and showed tremendous respect to each individual.
 	\item Ran food from kitchen to table to serve guests.
-	\item Refilled drinks, and placed water and bread on tables before or after guests arrived
+	\item Refilled drinks, placed water and bread on tables before or after guests arrived
+ 	\item Experienced in providing a reliable and pleasant experience for all customers.
 \end{itemize}
 
 \header{Skills}
@@ -129,7 +125,7 @@ A platform where three different types of users can register and log in. Regular
 Used different Data Structures and Algorithms to complete challenges in LeetCode.com. Able to solve easy problems, medium problems, and some hard problems.\\
 \vspace*{2mm}
 {\textbf{Organized our own Hackathon}}\\
-Montclair state Uniovesity has never hosted a hackathon before, so the computer club which includes me organized our first ever hackathon that had over 130participants. We had quite a few sponsors including google, Monster and even UPS. Although we were not cerified by MLH we still did the hackathon with the money we fund raised through school and sponsors.\\
+Montclair State University has never hosted a hackathon before, so the computer club organized our first ever hackathon that had over 130participants. The sponsor list consisted of: Google, Monster and UPS. The hackathon and all of the events were funded by Montclair State University and its sponsors.\\
 \vspace*{2mm}
 
 \header{Summary}
